--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -319,9 +319,10 @@
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label for="accountingcentre">Accounting Centre:</label>
-                                    <input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre" title="Input Accounting Centre" autocomplete="off" tabindex="24" />
+                                    <select id="accountingcentre" class="form-control" name="accountingcentre" title="Input Accounting Centre" autocomplete="off" tabindex="24" ></select>
+                                    <!--<input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre" title="Input Accounting Centre" autocomplete="off" tabindex="24" />
                                     <datalist id="accountingcentres">
-                                    </datalist>
+                                    </datalist>-->
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label for="description">Project Summary:</label>
