--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -172,15 +172,22 @@ There will be several copies of the web resource visible in the debugger as "aru
 
         // Go back to the previous tab.
         function ReturnToActiveTab() {
-            //var previousTab = formContext.Arup.PreviousTab;
-            //if (previousTab != null) {
-            //    DisplayTab(previousTab);
-            //}
-
+  
             var activeTabName = formContext.Arup.ActiveTabName;
             if (activeTabName != null) {
                 DisplayTab(activeTabName);
             }
+        }
+
+        //to get the dynamic text for Back Button
+        function GetLabelTextForBackButton() {
+            var backButtonText;
+            if (formContext.Arup.ActiveTabName != undefined)
+                 backButtonText = 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " ");
+            else 
+                 backButtonText = 'Back to the Active Stage';
+
+            return backButtonText;
         }
 
         // Ensure that the named tab is visible.
@@ -379,8 +386,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 {
 
                     // TOD: return to active stage
-                 //   'label': 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " "),
-                     'label': (typeof formContext != "undefined") ? 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " ") : 'Back to the Active Stage',
+                    'label': function () { return GetLabelTextForBackButton(); },
                     'action': function () {
                         ReturnToActiveTab();
                     },
@@ -389,7 +395,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             ],
             'Project_Financials_Tab': [
                 {
-                    'label': 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " "),
+                    'label': function () { return GetLabelTextForBackButton(); },
                     'action': function () {
                         ReturnToActiveTab();
                     },
@@ -502,7 +508,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             'Notes_tab': [
                 {
                     // TOD: return to active stage
-                    'label': 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " "),
+                    'label': function () { return GetLabelTextForBackButton(); },
                     'action': function () {
                         ReturnToActiveTab();
                     },
