Opportunity Wizard release 2

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -57,7 +57,7 @@
 <br>
 
 <div class="container-fluid" id="mysub">
-<div class="row arup_mb40">
+<div class="row arup_mb40 arup_inset45">
     <div id="wizard-steps-panel" class="wizard-steps-panel col-sm-8" ></div>
     <div class="col-sm-4">
         <br>
@@ -226,7 +226,7 @@
                     </div>
                     <form id="page4">
                         <div class="wizard-step" style="display: none;" id="WC_Step">
-                            <div class="container" id="WC">
+                            <div class="container-fluid" id="WC">
                                 <div class="form-group col-lg-6">
                                     <label for="project_country">Project Country:</label>
                                     <input list="countries" id="project_country" class="form-control input-form" name="project_country" title="Input project country" autocomplete="off" tabindex="20" />
