--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -251,7 +251,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="description">Project Summary:</label>
-                        <textarea id="description" class="form-control input-form" rows="6" style="min-height: 150px; overflow: auto; height: auto;" maxlength="2000" role="textbox" attrname="description" tabindex="34"></textarea>
+                        <textarea id="description" class="form-control input-form" rows="6" style="min-height: 150px; overflow: auto; height: auto;" maxlength="2000" role="textbox" attrname="description" tabindex="26"></textarea>
                     </div>
                 </div>
             </div>
@@ -267,19 +267,19 @@
                     </div>
                     <div class="form-group hidden">
                         <label for="K12">Is it K-12 School:</label>
-                        <input type="checkbox" id="K12" name="isK12" tabindex="35" />
+                        <input type="checkbox" id="K12" name="isK12" tabindex="25" />
                     </div>
                 </div>
                 <div class="col-md-6">
                         <div class="form-group">
                             <label for="arup_business">Arup Business:</label>
-                            <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" title="Input arup business" autocomplete="off" placeholder="Business Area" tabindex="25" />
+                            <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" title="Input arup business" autocomplete="off" placeholder="Business Area" tabindex="27" />
                             <datalist id="businesses">
                             </datalist>
                         </div>
                         <div class="form-group">
                             <label for="arup_subbusiness">Arup Sub Business:</label>
-                            <input list="subbusinesses" id="arup_subbusiness" class="form-control input-form" name="arup_subbusiness" title="Input arup sub business" autocomplete="off" placeholder="Business sub-area" tabindex="26" />
+                            <input list="subbusinesses" id="arup_subbusiness" class="form-control input-form" name="arup_subbusiness" title="Input arup sub business" autocomplete="off" placeholder="Business sub-area" tabindex="28" />
                             <datalist id="subbusinesses">
                             </datalist>
                         </div>
@@ -290,16 +290,16 @@
                     <div class="form-group pull-left">
                         <label class="displaysError">Global Services:</label>
                         <p>
-                        <label><input type="checkbox" name="global_services" value="100000001" tabindex="27"/> Advisory Services</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" name="global_services" value="100000000" tabindex="28"/> Architecture</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" name="global_services" value="100000006" tabindex="29"/> Digital</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" name="global_services" value="100000002" tabindex="30"/> Planning</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" name="global_services" value="770000000" tabindex="31"/> Not Applicable</label>&nbsp;&nbsp;
-                        <label><input type="checkbox" name="global_services" value="100000003" tabindex="32"/> Other</label>
+                        <label><input type="checkbox" name="global_services" value="100000001" tabindex="29"/> Advisory Services</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" name="global_services" value="100000000" tabindex="30"/> Architecture</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" name="global_services" value="100000006" tabindex="31"/> Digital</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" name="global_services" value="100000002" tabindex="32"/> Planning</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" name="global_services" value="770000000" tabindex="33"/> Not Applicable</label>&nbsp;&nbsp;
+                        <label><input type="checkbox" name="global_services" value="100000003" tabindex="34"/> Other</label>
                     </div>
-                    <div class="form-group pull-right invisible col-md-4s">
+                    <div class="form-group pull-right invisible col-md-4">
                         <label for="globalservices_other">Global Services (Other):</label>
-                        <input id="globalservices_other" class="form-control input-form" tabindex="33" autocomplete="off"/>
+                        <input id="globalservices_other" class="form-control input-form" tabindex="35" autocomplete="off"/>
                     </div>
                 </div>
             </div>
