--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -54,7 +54,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             font-size: 16px;
             font-weight: 400;
             padding: 5px 10px 10px 5px;
-            background-color: #F44336;
+            background-color: #F04000;
             box-shadow: 1px 1px 2px 2px #ab918f;
             -webkit-box-shadow: 1px 5px 5px 1px #ab918f;
             -moz-box-shadow: 1px 1px 2px 2px #ab918f;
@@ -377,7 +377,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'isredbutton': false
                 },
                 {
-                    'label': '</br><p>Use buttons at top for next step:-</br><ul><li>Close as Lost-</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>',
+                    'label': '</br><p>Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>',
                     'hidden': false,
                     'islabel': true
                 }
