comment successcallback + setupnavigationButton

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -200,7 +200,7 @@ There will be several copies of the web resource visible in the debugger as "aru
         // Move to next step in BPF
         function MoveNext() {
             formContext.Arup.BPFMoveNext(formContext, function () {
-                setupNavigationButtons(true);
+               // setupNavigationButtons(true);
             });
         }
 
